--- a/index.html
+++ b/index.html
@@ -2,32 +2,35 @@
 <html lang="en">
 
   <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="TemplateMo">
+    <meta name="description" content="EducoCareer offers expert educational consulting services to help students achieve their academic and career goals. Our personalized guidance and one-on-one sessions ensure informed decision-making for choosing the right career path.">
+    <meta name="author" content="EducoCareer">
+    <meta name="keywords" content="educational consulting, career guidance, academic goals, personalized career path, student consulting, career assessment">
+    <meta property="og:title" content="EducoCareer – Guide You to Grow | Expert Educational Consulting">
+    <meta property="og:description" content="EducoCareer provides expert educational consulting services to help students achieve their academic and career goals with personalized guidance and assessments.">
+    <meta property="og:image" content="https://educocareer.in/assets/img/og-image.jpg"> <!-- Replace with your own image URL -->
+    <meta property="og:url" content="https://educocareer.in">
+    <meta property="og:type" content="website">
+
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
-    <title>Educocareer – Guide you to grow</title>
+    <title>EducoCareer – Guide You to Grow | Expert Educational Consulting</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="assets/css/fontawesome.css">
     <link rel="stylesheet" href="assets/css/templatemo-edu-meeting.css">
     <link rel="stylesheet" href="assets/css/owl.css">
     <link rel="stylesheet" href="assets/css/lightbox.css">
-<!--
 
-TemplateMo 569 Edu Meeting
-
-https://templatemo.com/tm-569-edu-meeting
-
--->
-  </head>
+    <!-- Favicon -->
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/1278600050158600235/1279552394836840478/images_1.jpeg?ex=66d4db87&is=66d38a07&hm=fa0b038f45a2b9eecb8395ea8a9d95cf737a9712305652d4df0a72d7341d4189&" type="image/jpeg">
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://educocareer.in">
+</head>
 
 <body>
 
